<resources>
    <string name="app_name">Coral Academy</string>

    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Introduction</string>
    <string name="second_fragment_label">Login</string>
    <string name="third_fragment_label">Create Account</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for Introduction page -->
    <string name="introduction">
        Welcome to Coral Academy!
    </string>

    <string name="intro_body1">
        This app is run by Corallium, a student-led organization trying to spread awareness about dying coral reefs. (We also raise a coral tank!)
    </string>

    <string name="intro_body2">
        The main functions on this app are the schedule, Corallium Calendar, submitting reimbursement forms, and a blog for non-members!
    </string>

    <string name="corallium_member_login_notice">
        If you are a Corallium member, ask @Poke/Thomas ZHOU for your specific login details.
    </string>

    <!-- Strings for Login page -->

    <string name="login_prompt">
        Please log into your account:
    </string>

    <!-- Strings used for Create Account page -->

    <string name="account_creation_prompt">
        Create a username and password below!
    </string>

    <string name="password_creation_limitations">
        Password needs to be 6-20 characters
    </string>

    <string name="coralMember_checkbox">
        Are you a member of Corallium?
    </string>

    <!-- Strings used for Coral Home Screen page -->

    <string name="home_screen_welcome">
        Welcome to Coral Academy!
    </string>

    <string name="open_day_text_one">
        Corallium was invited to be part of YCIS\'s Open Day, where we had a booth on the ground floor. We sold homemade coral-themed cookies that were made by the team, and we also had a minigame about tank maintenance.
    </string>

    <string name="open_day_text_two">
        We sold out all 200 of our cookies in just under 2 hours, and almost every single customer played the minigame as well, and some even followed our Instagram @coralliumhk.
    </string>

    <string name="semester2_schedule_mon">
        Gwak, James, Jesse, Shirley [Morning Break]
    </string>

    <string name="semester2_schedule_tue">
        Kaden, Yolanda, Shirley [US Lunch] | Addison, Tiffany, Edwina [After School]
    </string>

    <string name="semester2_schedule_wed">
        Gwak, Conan [Morning Break] | Edward, Isaac [After School]
    </string>

    <string name="semester2_schedule_thur">
        Gwak, Conan, Isabella [Morning Break] | Addison, Hilary [After School]
    </string>

    <string name="semester2_schedule_fri">
        Kaden, Victoria (US Lunch), with Tobin on P8 for any unfinished business
    </string>

    <!-- Strings used for Admin Panel -->

    <string name="admin_panel_title">
        Admin Panel
    </string>

    <!-- Strings for certain XML files -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Schedule</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="check_this_if_you_are_a_member_of_corallium">Check this if you are a member of Corallium.</string>
    <string name="create_a_username">Create a username</string>
    <string name="create_a_password">Create a password</string>
    <string name="re_enter_the_password">Re-enter the password</string>
    <string name="create_account">Create Account</string>

</resources>