<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/createUsernameText"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/account_creation_prompt"
        android:textAlignment="center"
        android:textColor="@color/corallium_red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createUsername"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_corner"
        android:hint="Create a username"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUsernameText" />

    <EditText
        android:id="@+id/createAccountPassword"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner"
        android:ems="20"
        android:hint="Create a password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLengthPrompt" />

    <EditText
        android:id="@+id/createAccountPasswordCheck"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="20"
        android:hint="Re-enter the password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountPassword" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="Create Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountPasswordCheck" />

    <TextView
        android:id="@+id/passwordLengthPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_creation_limitations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUsername" />

    <CheckBox
        android:id="@+id/coralMember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/corallium_red"
        android:fontFamily="sans-serif-black"
        android:text="@string/coralMember_checkbox"
        android:textColor="@color/corallium_red"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="463dp" />
</androidx.constraintlayout.widget.ConstraintLayout>